--- a/src/App/T360Bundle/Resources/views/T360Axes/edit.html.twig
+++ b/src/App/T360Bundle/Resources/views/T360Axes/edit.html.twig
@@ -1,16 +1,12 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>T360Axes edit</h1>
-
+    {{ form(delete_form) }}
+    <br>
+    <hr/>
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('t360axes') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+
+
+
 {% endblock %}
