--- a/src/App/T360Bundle/Resources/views/T360Axes/new.html.twig
+++ b/src/App/T360Bundle/Resources/views/T360Axes/new.html.twig
@@ -1,15 +1,8 @@
-{% extends '::base.html.twig' %}
+{% extends 'AppT360Bundle::BaseformPage.html.twig' %}
 
 {% block body -%}
-    <h1>T360Axes creation</h1>
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('t360axes') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+
 {% endblock %}
