--- a/src/App/T360Bundle/Resources/views/Default/index.html.twig
+++ b/src/App/T360Bundle/Resources/views/Default/index.html.twig
@@ -4,7 +4,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h4>{{ all }} => all </h4>
-    <h2>{{ repondu }} => repondu</h2>
+    {#<h4>{{ all }} => all </h4>#}
+    {#<h2>{{ repondu }} => repondu</h2>#}
 </body>
 </html>
