--- a/src/App/T360Bundle/Resources/views/T360Reponses/showResults.html.twig
+++ b/src/App/T360Bundle/Resources/views/T360Reponses/showResults.html.twig
@@ -7,7 +7,9 @@
     <script>
     $(document).ready(function () {
         console.log("ready to charge data ");
-
+        Highcharts.setOptions({
+            colors: ['#ED1A3B', '#4596D1', '#F8981D', '#034EA2','#434348']
+        });
 
         var axis = [];
         var ReponseGenerale = [];
