--- a/src/App/T360Bundle/Resources/views/BasePage.html.twig
+++ b/src/App/T360Bundle/Resources/views/BasePage.html.twig
@@ -10,6 +10,8 @@
     <link href="{{ asset('bundles/AppT360/css/AdminLTE.min.css') }}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('bundles/AppT360/css/skin-red.min.css') }}" rel="stylesheet" type="text/css"/>
     <link href="{{ asset('bundles/AppT360/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css"/>
+    {% block head %}
+    {% endblock %}
     <!-- REQUIRED JS SCRIPTS -->
     <script type="text/javascript" src="{{ asset('bundles/AppT360/js/jQuery-2.1.3.min.js') }}"></script>
     <script type="text/javascript" src="{{ asset('bundles/AppT360/js/app.min.js') }}"></script>
@@ -152,9 +154,9 @@
                 <ul class="treeview-menu">
                     <li><a href="#">Listes des Evaluations</a></li>
                     <li><a href="#"  data-toggle="modal" data-target="#new-eval-modal">Ajouter une évaluations</a></li>
-                    <li><a href="{{ path('t360axes') }}">Gestion des Axes d'évaluation</a></li>
+                    <li><a href="{{ path('t360axes') }}">Gestion des Axes et des questions d'évaluation</a></li>
                     <li><a href="{{ path('get_directions_results') }}">Resultats d'évaluations par direction</a></li>
-                    <li><a href="#">Résultats d'évaluation par personnes</a></li>
+                    <li><a href="{{ path('get_emplyees_for_historique') }}">Résultats d'évaluation par personnes</a></li>
                 </ul>
             </li>
         </ul>
