--- a/src/App/T360Bundle/Resources/views/T360Axes/index.html.twig
+++ b/src/App/T360Bundle/Resources/views/T360Axes/index.html.twig
@@ -9,92 +9,105 @@
 
 
     <div class="container">
-        <div class="row">
-            <div class="col-lg-4">
-                <div class="box box-danger">
-                    <div class="box-header with-border">
-                        <div class="col-lg-4 box-title">
-                            <h6 class="box-title"><strong>N° Axe</strong></h6>
-                        </div>
-                        <div class="col-lg-4 box-title">
-                            <h6 class="box-title"><strong>Libelle</strong></h6>
-                        </div>
-                        <button class="btn btn-box-tool pull-right bg-red" data-original-title="Ajouter axe" title data-toggle="modal" data-target="#new-axe-modal">
-                            <i class="fa fa-plus"></i>
-                        </button>
 
-                    </div>
-                    <div class="box-body">
-                        <div class="list-group">
-                            {% for entity in entities %}
-                                <a class="list-group-item to-show" data-libelle="{{ entity.libelle }}" data-questions="{{ path("t360questions_axeid",{ 'id': entity.id }) }}" data-href="{{ path("t360axes_edit",{ 'id': entity.id }) }}" href="#">
-                                    <div class="row">
-                                        <div class="col-lg-4 top-buffer-x2"><span class="badge">{{ entity.id }}</span>
+        <div class="row">
+
+            <div class="nav-tabs-custom nav">
+                <ul class="nav nav-tabs ">
+
+                    {% for i in 0..entities|length-1 %}
+                        {% if activeId is defined %}
+                            {% if entities[i].id== activeId %}
+                                <li class="active"><a id="first" href="#info-section" class="clickable"
+                                                      data-href-questions="{{ path("t360questions_axeid",{"id": entities[i].id}) }}"
+                                                      data-href="{{ path("t360axes_edit",{"id": entities[i].id}) }}"
+                                                      data-toggle="tab">{{ entities[i].libelle }}</a></li>
+                            {% else %}
+
+                                <li><a href="#info-section" class="clickable"
+                                       data-href-questions="{{ path("t360questions_axeid",{"id": entities[i].id}) }}"
+                                       data-href="{{ path("t360axes_edit",{"id": entities[i].id}) }}"
+                                       data-toggle="tab">{{ entities[i].libelle }}</a></li>
+                            {% endif %}
+                        {% else %}
+
+                            {% if i == 0 %}
+                                <li class="active"><a id="first" href="#info-section" class="clickable"
+                                                      data-href-questions="{{ path("t360questions_axeid",{"id": entities[i].id}) }}"
+                                                      data-href="{{ path("t360axes_edit",{"id": entities[i].id}) }}"
+                                                      data-toggle="tab">{{ entities[i].libelle }}</a></li>
+                            {% else %}
+
+                                <li><a href="#info-section" class="clickable"
+                                       data-href-questions="{{ path("t360questions_axeid",{"id": entities[i].id}) }}"
+                                       data-href="{{ path("t360axes_edit",{"id": entities[i].id}) }}"
+                                       data-toggle="tab">{{ entities[i].libelle }}</a></li>
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    <li class="pull-right">
+                        <button class="btn btn-box-tool btn-primary" data-toggle="modal" href="#new-axe-modal"><i
+                                    class="fa fa-plus"></i>&nbsp;Ajouter Axe
+                        </button>
+                    </li>
+                </ul>
+
+                <div class="tab-content">
+
+                    <div id="info-section" class="tab-pane active">
+                        <div class="row " id="row-tab">
+                            <div class="col-lg-5 col-lg-offset-1">
+                                <div class="box box-body box-danger">
+                                    <div class="box-header with-border">
+                                        <h3 class="box-title"><strong>Edit axe </strong></h3>
+
+                                        <p class="text-red" id="edit-axe-title"></p>
+
+                                    </div>
+                                    <div id="edit-Axe" class="box-body "></div>
+                                    <div class="overlay" id="edit-axe-overlay">
+                                        <i class="fa fa-refresh fa-spin"></i>
+                                    </div>
+                                </div>
+
+
+                            </div>
+                            <!-- /spider schema -->
+
+                            <div class="col-lg-5">
+                                <div class="row"> <!-- linear schema -->
+                                    <div class="box box-body box-danger">
+                                        <div class="box-header with-border">
+                                            <h3 class="box-title"><strong>Liste des questions </strong></h3>
+
                                         </div>
-                                        <div class="col-lg-4"><h5>{{ entity.libelle }}</h5></div>
+                                        <div id="question-list" class="box-body"></div>
+                                        <div class="overlay" id="question-list-overlay">
+                                            <i class="fa fa-refresh fa-spin"></i>
+                                        </div>
+                                        <div class="box-footer">
+                                            <a href="#new-question-modal" data-toggle="modal" class="btn btn-default">
+                                                <i class="fa fa-arrow-circle-left"></i>
+                                                Ajouter Question
+                                            </a>
+                                        </div>
                                     </div>
 
-                                </a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            </div>
+                                </div>
+                                <!-- /linear schema -->
 
-            <div class="col-lg-7">
-                <div class="row">
-                    <!-- questions box -->
-                    <div id="questions" class="box box-danger" hidden="hidden">
-                        <div class="box-header">
-                            <h3 class="box-title"><strong>Liste des questions</strong></h3>
-                            <p class="add-class text-red"></p>
-                            <div class="box-tools pull-right">
-                                <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
-                                </button>
                             </div>
                         </div>
-
-                        <div id="question-list" class="box-body">
-
-                        </div>
-                        <!-- Loading (remove the following to stop the loading)-->
-                        <div class="overlay" id="loading-state-questions">
-                            <i class="fa fa-refresh fa-spin"></i>
-                        </div>
-                        <!-- end loading -->
                     </div>
-                    <!-- /questions box -->
 
-                    <div id="axe-edit" class="box box-danger collapsed-box" hidden="hidden">
-                        <div class="box-header">
-                            <h3 class="box-title"><strong>Edit Axe</strong></h3>
-                            <p class="add-class text-red"></p>
-                            <div class="box-tools pull-right">
-                                <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-plus"></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="box-body" id="edit-axe-body">
 
-                        </div>
-                        <!-- /.box-body -->
-                        <!-- Loading (remove the following to stop the loading)-->
-                        <div class="overlay" id="loading-state">
-                            <i class="fa fa-refresh fa-spin"></i>
-                        </div>
-                        <!-- end loading -->
-                    </div>
-                    <!-- /.box -->
                 </div>
             </div>
         </div>
 
+        <br/><br/><br/><br/><br/>
+
     </div>
-    <div class="col-md-3">
-
-    </div><!-- /.col -->
-
-
 
 
 
@@ -115,35 +128,101 @@
         </div>
     </div>
 
+    <div class="modal fade " id="new-question-modal" tabindex="-1" role="dialog"><!-- div modal pour ajout d'axe -->
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h3 class="modal-title">Ajout d'une nouvelle question </h3>
+                </div>
+                <div class="modal-body" id="form-add">
+                    {{ render(controller('AppT360Bundle:T360Questions:new')) }}
+                </div>
+                <div class="modal-footer">
+                    <div class="btn btn-danger" data-dismiss="modal">Annuler</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade " id="edit-question-modal" tabindex="-1" role="dialog"><!-- div modal pour ajout d'axe -->
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h3 class="modal-title">Modifer une question </h3>
+                </div>
+                <div class="box">
+                    <div class="modal-body box-body" id="form-edit-question">
+
+                    </div>
+                    <div class="overlay" id="edit-question-overlay">
+                        <i class="fa fa-refresh fa-spin"></i>
+                    </div>
+
+                </div>
+
+                <div class="modal-footer">
+                    <div class="btn btn-danger" data-dismiss="modal">Annuler</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script>
-        var oldUrl="";
-        $(".to-show").click(function () {
+        $(document).ready(function () {
 
-            var url = $(this).attr("data-href");
-            var id = $(this).attr("data-questions");
-            var libelle= $(this).attr("data-libelle");
-           if(url!=oldUrl){
-               oldUrl=url;
-               /*****************Liste des Question************************/
-               $("#questions").show("slide");
-               $("#loading-state-questions").show();
-               $.ajax({url: id}).then(function (data) {
-                   $("#question-list").html(data);
-                   $("#loading-state-questions").hide();
-               });
-               /******************Form Edit Axes***********************/
-               $("#loading-state").show();
-               $("#axe-edit").show("slide");
+            $.ajax({url: $("#first").attr("data-href")}).then(function (data) {
+                $("#edit-Axe").html(data);
+                $("#edit-axe-overlay").toggle();
+                $("#edit-axe-title").append($("#first").text());
+//                console.log(data);
 
-               $.ajax({url: url}).then(function (data) {
-                   $("#edit-axe-body").html(data);
-                   $("#loading-state").hide();
+            }).fail(function () {
+                $("#edit-axe-overlay").toggle();
+                $("#edit-axe-overlay").html('<div class="center-block text-center"><h4 class="text-red-total"><span class="fa fa-warning"> </span> &nbsp; Erreur de connexion</h4></div>');
+            });
 
-               });
+            $.ajax({url: $("#first").attr("data-href-questions")
+            }).then(function (data) {
+                $("#question-list").html(data);
+//                console.log(data);
+                $("#question-list-overlay").toggle();
+            }).fail(function () {
+                $("#question-list").html('<div class="center-block text-center"><h4 class="text-red-total"><span class="fa fa-warning"> </span> &nbsp; Erreur de connexion</h4></div>');
+                $("#question-list-overlay").toggle();
+            });
 
-               $(".add-class").html(libelle);
-           }
-        })
+        });
+
+        $(".clickable").click(function () {
+
+            if (!$(this).parent().hasClass('active')) {
+                var libelle = $(this).text();
+                $("#edit-axe-overlay").toggle();
+                $("#question-list-overlay").toggle();
+                $.ajax({url: $(this).attr("data-href")}).then(function (data) {
+
+                    $("#edit-Axe").html(data);
+                    $("#edit-axe-overlay").toggle();
+                    $("#edit-axe-title").html(libelle);
+
+                }).fail(function () {
+                    $("#question-list").html('<div class="center-block text-center"><h4 class="text-red-total"><span class="fa fa-warning"> </span> &nbsp; Erreur de connexion</h4></div>');
+                    $("#question-list-overlay").toggle();
+                });
+
+                $.ajax({url: $(this).attr("data-href-questions")}).then(function (data) {
+                    $("#question-list").html(data);
+                    $("#question-list-overlay").toggle();
+
+                }).fail(function () {
+                    $("#edit-axe-overlay").toggle();
+                    $("#edit-axe-overlay").html('<div class="center-block text-center"><h4 class="text-red-total"><span class="fa fa-warning"> </span> &nbsp; Erreur de connexion</h4></div>');
+                });
+            }
+        });
+
 
     </script>
 {% endblock %}
